# mead-baseline

./: .gitignore  .gitmodules  MANIFEST.in  NOTICE  README.md  atis-bert-joint-tf.yml  clean.py  contributors.md  setup.cfg  setup.py  v2.md
addons/: README.md  create_servable_embeddings.py  demolib.py  embed_bert.py  embed_bert_pytorch.py  embed_bert_tf.py  embed_elmo.py  embed_tlm_pytorch.py  embed_tlm_tf.py  exporter_elmo.py  mead3_pytorch.py  paired.py  pool_embed.py  pretrained_transformer_tagger.py  reader_conllcased.py  reader_pandas.py  reader_parallel_classify.py  residual_conv.py  squeeze_mlm.py  tagger_score_services.py  tagger_with_scores.py  vec_text.py
api-examples/: analyze_calibration.py  bio_to_iobes.py  bl_train_api_tf.py  classify-text-onnx.py  classify-text-simple-features.py  classify-text.md  classify-text.py  classify_text.py  convert_huggingface_checkpoints.py  create-ngram-embeddings.py  deps_text.py  eager-lm-pytorch.py  eager-lm.py  eager-tagger.py  eager.py  eager_lm_pytorch.py  eager_lm_tf.py  eager_tagger_tf.py  ed-text.py  embed-sentence.py  (+71 more)
api-examples/pytorch_cpp/: CMakeLists.txt  README.md  classify-text.cpp  install.sh  tag-text.cpp
layers/: README.md  pyproject.toml  setup.cfg  setup.py
layers/eight_mile/: __init__.py  bleu.py  confusion.py  conlleval.py  downloads.py  embeddings.py  metrics.py  optz.py  progress.py  train.py  utils.py  version.py
layers/eight_mile/calibration/: __init__.py  calibration.py
layers/eight_mile/calibration/metrics/: __init__.py  calibration_error.py
layers/eight_mile/calibration/plot/: __init__.py  confidence_histogram.py  reliability_diagram.py
layers/eight_mile/metrics/: multilabel.py
layers/eight_mile/pytorch/: embeddings.py  layers.py  optz.py  serialize.py  train.py
layers/eight_mile/tf/: embeddings.py  layers.py  optz.py  serialize.py  train.py
(+1105 files in other folders)
