[metadata]
NAME = mead-layers
version = 2.4.7
description = Reusable Deep-Learning layers for NLP
author = dpressel
author_email = dpressel@gmail.com
url = https://www.github.com/dpressel/mead-baseline/layers

license = Apache 2.0
keywords=
    deep-learning
    nlp
    pytorch
    tensorflow
long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    ../LICENSE
    ../NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:

install_requires =
    numpy
    six

[options.entry_points]
console_scripts =
    bleu = eight_mile.bleu:main
    conlleval = eight_mile.conlleval:main

[options.extras_require]
test:
    pytest
    mock
    contextdecorator
    pytest-forked
yaml:
    pyyaml
tf2:
    tensorflow_addons
plot:
    matplotlib
